# ping_pong

./: .gitignore  main.py  pyproject.toml  temp
static/: choose_game.html  game.html  game.js  main.css  temp.js
