[tool.poetry]
name = "pingpong"
version = "0.1.0"
description = ""
authors = ["Saatarko <saatarko@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
fastapi = "^0.112.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
